--- a/changgou-parent/changgou-service-api/changgou-service-goods-api/pom.xml
+++ b/changgou-parent/changgou-service-api/changgou-service-goods-api/pom.xml
@@ -13,5 +13,13 @@
     <description>
         商品服务的api工程：pojo + feign
     </description>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.8</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
