--- a/code-template/src/main/resources/application.properties
+++ b/code-template/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 #pojo\u5305\u8DEF\u5F84
-pojoPackage=com.changgou.goods.pojo
+pojoPackage=com.changgou.content.pojo
 #Dao\u5305\u8DEF\u5F84
-mapperPackage=com.changgou.goods.dao
+mapperPackage=com.changgou.content.dao
 #service\u63A5\u53E3\u5305\u8DEF\u5F84
-serviceInterfacePackage=com.changgou.goods.service
+serviceInterfacePackage=com.changgou.content.service
 #service\u63A5\u53E3\u5B9E\u73B0\u7C7B\u5305\u8DEF\u5F84
-serviceInterfaceImplPackage=com.changgou.goods.service.impl
+serviceInterfaceImplPackage=com.changgou.content.service.impl
 #controller\u5305\u8DEF\u5F84
-controllerPackage=com.changgou.goods.controller
+controllerPackage=com.changgou.content.controller
 #feign\u5305\u8DEF\u5F84
-feignPackage=com.changgou.goods.feign
+feignPackage=com.changgou.content.feign
 #\u662F\u5426\u542F\u7528swagger
 enableSwagger=false
 #swagger-ui\u7684\u8DEF\u5F84
 swaggeruipath=com.changgou.swagger
 #\u670D\u52A1\u540D\u5B57,\u7528\u4E8E\u751F\u6210feign
-serviceName=goods
+serviceName=content
 
 #\u6570\u636E\u6E90\u914D\u7F6E
-url=jdbc:mysql://192.168.211.132:3306/changgou_goods
+url=jdbc:mysql://192.168.211.132:3306/changgou_content
 uname=root
 pwd=123456
 driver=com.mysql.jdbc.Driver
