--- a/changgou-parent/changgou-service/changgou-service-content/pom.xml
+++ b/changgou-parent/changgou-service/changgou-service-content/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>changgou-service-content-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.xpand</groupId>
+            <artifactId>starter-canal</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
