--- a/changgou-parent/changgou-service/changgou-service-content/src/main/resources/application.yml
+++ b/changgou-parent/changgou-service/changgou-service-content/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 server:
-  port: 18083
+  port: 18084
 spring:
   application:
-    name: canal
-  redis:
-    host: 192.168.211.132
-    port: 6379
+    name: content
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.211.132:3306/changgou_content?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    username: root
+    password: 123456
 eureka:
   client:
     service-url:
@@ -15,8 +17,10 @@ eureka:
 feign:
   hystrix:
     enabled: true
-  httpclient:
-    connection-timeout: 20000
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true  #开启驼峰功能
+
 #hystrix 配置
 hystrix:
   command:
@@ -27,14 +31,3 @@ hystrix:
           enabled: true
         isolation:
           strategy: SEMAPHORE
-          thread:
-            timeoutInMilliseconds: 600000
-#canal配置
-canal:
-  client:
-    instances:
-      example:
-        host: 192.168.211.132
-        port: 11111
-ribbon:
-  ReadTimeout: 600000
