--- a/changgou-parent/changgou-service/changgou-service-canal/pom.xml
+++ b/changgou-parent/changgou-service/changgou-service-canal/pom.xml
@@ -29,11 +29,11 @@
             <scope>compile</scope>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>com.changgou</groupId>
             <artifactId>changgou-service-content-api</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
 </project>
