--- a/changgou-parent/changgou-service/changgou-service-search/pom.xml
+++ b/changgou-parent/changgou-service/changgou-service-search/pom.xml
@@ -3,16 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>changgou-service-api</artifactId>
+        <artifactId>changgou-service</artifactId>
         <groupId>com.changgou</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>changgou-service-goods-api</artifactId>
-    <description>
-        商品服务的api工程：pojo + feign
-    </description>
-
+    <artifactId>changgou-service-search</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.changgou</groupId>
+            <artifactId>changgou-service-search-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
